kubernetes/smackapi-deployment.yaml
# smackapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smackapi-api
  namespace: microsmack
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: docker.io/992220449/smackapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: dockerhub-secret
