kubernetes/smackapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smackapi-api
  namespace: microsmack
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081  # Exposed port for external access
