kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smackweb
  namespace: microsmack
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
