kubernetes/smackapi-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: smackapi
  namespace: microsmack
spec:
  host: smackapi-api.microsmack.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
